backport: re PR rtl-optimization/13041 (linux-2.6/sound/core/oss/rate.c miscompiled)

Backport from mainline:

	2003-11-27  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/13041
	* final.c (frame_pointer_needed): Fix comment.
	* reload1.c (reload): Decrease alignment of the frame
	pointer if it was used for register allocation.

From-SVN: r74096